# python-guidance

./: .gitignore  01-basic.ipynb  Makefile  env.sample  pyproject.toml
